[gd_scene load_steps=12 format=2]

[ext_resource path="res://res/fonts/kingthings-petrock/Kingthings Petrock.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://sheets/Combats.gd" type="Script" id=2]
[ext_resource path="res://res/imgs/old_sheet_1.jpg" type="Texture" id=3]
[ext_resource path="res://menu/BtMoin.tscn" type="PackedScene" id=4]
[ext_resource path="res://menu/BtPlus.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 100
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 60
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.317647, 0.282353, 0.282353, 0.752941 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 5
corner_radius_top_right = 1
corner_radius_bottom_right = 5
corner_radius_bottom_left = 1

[sub_resource type="DynamicFont" id=5]
size = 70
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 65
use_filter = true
font_data = ExtResource( 1 )

[node name="Combats" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.470588, 0.466667, 0.466667, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bt_Menu" type="Button" parent="."]
margin_left = 24.6132
margin_top = 24.6132
margin_right = 124.613
margin_bottom = 79.6132
rect_min_size = Vector2( 100, 55 )
custom_fonts/font = SubResource( 1 )
text = "Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bt_Annuler" type="Button" parent="."]
margin_left = 840.613
margin_top = 24.6132
margin_right = 1023.61
margin_bottom = 100.613
rect_min_size = Vector2( 100, 55 )
custom_fonts/font = SubResource( 1 )
text = "Annuler"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 94.0
margin_top = 187.0
margin_right = -104.0
margin_bottom = -62.0
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="ScrollContainer"]
margin_right = 940.0
margin_bottom = 844.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/CenterContainer"]
margin_right = 940.0
margin_bottom = 844.0
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="Stats" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer"]
margin_right = 940.0
margin_bottom = 312.0
custom_constants/separation = 25

[node name="TitreStats" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/Stats"]
margin_right = 940.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 2 )
text = "Stats :"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats_Vars" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/Stats"]
margin_top = 146.0
margin_right = 940.0
margin_bottom = 312.0
size_flags_horizontal = 3
custom_constants/separation = 150

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/Stats/Stats_Vars"]
margin_right = 395.0
margin_bottom = 166.0

[node name="Habilete" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/Stats/Stats_Vars/HBoxContainer"]
margin_right = 316.0
margin_bottom = 166.0

[node name="TitreHabilete" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/Stats/Stats_Vars/HBoxContainer/Habilete"]
margin_right = 316.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 3 )
text = "Habilet√©"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Habilete" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer/Stats/Stats_Vars/HBoxContainer/Habilete"]
margin_top = 80.0
margin_right = 316.0
margin_bottom = 163.0
rect_min_size = Vector2( 80, 80 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
max_length = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/Stats/Stats_Vars/HBoxContainer"]
margin_left = 320.0
margin_right = 395.0
margin_bottom = 166.0
alignment = 2

[node name="BtMoin" parent="ScrollContainer/CenterContainer/VBoxContainer/Stats/Stats_Vars/HBoxContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_right = 75.0
margin_bottom = 81.0
path_lineedit = "../Habilete/Habilete"

[node name="BtPlus" parent="ScrollContainer/CenterContainer/VBoxContainer/Stats/Stats_Vars/HBoxContainer/VBoxContainer" instance=ExtResource( 5 )]
margin_top = 85.0
margin_right = 75.0
margin_bottom = 166.0
path_lineedit = "../Habilete/Habilete"

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/Stats/Stats_Vars"]
margin_left = 545.0
margin_right = 940.0
margin_bottom = 166.0

[node name="Endurance" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/Stats/Stats_Vars/HBoxContainer2"]
margin_right = 316.0
margin_bottom = 166.0

[node name="TitreEndurance" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/Stats/Stats_Vars/HBoxContainer2/Endurance"]
margin_right = 316.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 3 )
text = "Endurance"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Endurance" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer/Stats/Stats_Vars/HBoxContainer2/Endurance"]
margin_top = 80.0
margin_right = 316.0
margin_bottom = 163.0
rect_min_size = Vector2( 80, 80 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
max_length = 20

[node name="VBoxContainer2" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/Stats/Stats_Vars/HBoxContainer2"]
margin_left = 320.0
margin_right = 395.0
margin_bottom = 166.0
alignment = 2

[node name="BtMoin" parent="ScrollContainer/CenterContainer/VBoxContainer/Stats/Stats_Vars/HBoxContainer2/VBoxContainer2" instance=ExtResource( 4 )]
margin_right = 75.0
margin_bottom = 81.0
path_lineedit = "../Endurance/Endurance"

[node name="BtPlus" parent="ScrollContainer/CenterContainer/VBoxContainer/Stats/Stats_Vars/HBoxContainer2/VBoxContainer2" instance=ExtResource( 5 )]
margin_top = 85.0
margin_right = 75.0
margin_bottom = 166.0
path_lineedit = "../Endurance/Endurance"

[node name="Combat" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer"]
margin_top = 362.0
margin_right = 940.0
margin_bottom = 844.0
custom_constants/separation = 25

[node name="TitreCombat" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat"]
margin_right = 940.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 2 )
text = "Combat :"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats_Vars" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat"]
margin_top = 146.0
margin_right = 940.0
margin_bottom = 482.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 1

[node name="EnduMaitre" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars"]
margin_left = 29.0
margin_right = 327.0
margin_bottom = 336.0

[node name="Titre" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars/EnduMaitre"]
margin_right = 298.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 3 )
text = "Grand Maitre
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Endu_GrandMaitre" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars/EnduMaitre"]
margin_top = 151.0
margin_right = 298.0
margin_bottom = 251.0
rect_min_size = Vector2( 0, 100 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
max_length = 20
placeholder_text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars/EnduMaitre"]
margin_top = 255.0
margin_right = 298.0
margin_bottom = 336.0
alignment = 1

[node name="BtMoin2" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars/EnduMaitre/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 72.0
margin_right = 147.0
margin_bottom = 81.0
path_lineedit = "../Endu_GrandMaitre"

[node name="BtPlus2" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars/EnduMaitre/HBoxContainer" instance=ExtResource( 5 )]
margin_left = 151.0
margin_right = 226.0
margin_bottom = 81.0
path_lineedit = "../Endu_GrandMaitre"

[node name="QuotAtt" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars"]
margin_left = 327.0
margin_right = 619.0
margin_bottom = 336.0

[node name="Titre" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars/QuotAtt"]
margin_right = 292.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 3 )
text = "Quotient
d'Attaque"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuotAtt" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars/QuotAtt"]
margin_top = 151.0
margin_right = 292.0
margin_bottom = 251.0
rect_min_size = Vector2( 0, 100 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
max_length = 20
placeholder_text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars/QuotAtt"]
margin_top = 255.0
margin_right = 292.0
margin_bottom = 336.0
alignment = 1

[node name="BtMoin2" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars/QuotAtt/HBoxContainer2" instance=ExtResource( 4 )]
margin_left = 69.0
margin_right = 144.0
margin_bottom = 81.0
path_lineedit = "../QuotAtt"

[node name="BtPlus2" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars/QuotAtt/HBoxContainer2" instance=ExtResource( 5 )]
margin_left = 148.0
margin_right = 223.0
margin_bottom = 81.0
path_lineedit = "../QuotAtt"

[node name="EnduEnemi" type="VBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars"]
margin_left = 619.0
margin_right = 911.0
margin_bottom = 336.0

[node name="TitreEnduEnnemi" type="Label" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars/EnduEnemi"]
margin_right = 292.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 3 )
text = "Ennemi          
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnduEnnemi" type="LineEdit" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars/EnduEnemi"]
margin_top = 151.0
margin_right = 292.0
margin_bottom = 251.0
rect_min_size = Vector2( 0, 100 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
max_length = 20
placeholder_text = "0"

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars/EnduEnemi"]
margin_top = 255.0
margin_right = 292.0
margin_bottom = 336.0
alignment = 1

[node name="BtMoin2" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars/EnduEnemi/HBoxContainer3" instance=ExtResource( 4 )]
margin_left = 69.0
margin_right = 144.0
margin_bottom = 81.0
path_lineedit = "../EnduEnnemi"

[node name="BtPlus2" parent="ScrollContainer/CenterContainer/VBoxContainer/Combat/Stats_Vars/EnduEnemi/HBoxContainer3" instance=ExtResource( 5 )]
margin_left = 148.0
margin_right = 223.0
margin_bottom = 81.0
path_lineedit = "../EnduEnnemi"
[connection signal="pressed" from="Bt_Menu" to="." method="_on_Bt_Menu_pressed"]
[connection signal="pressed" from="Bt_Annuler" to="." method="_on_Bt_Annuler_pressed"]
